# RShell

./: .gitignore  CMakeLists.txt  LICENSE  main.py
src/: builtin.cpp  builtin.hpp  main.cpp  shell.cpp  shell.hpp
